{
  "version": 4,
  "terraform_version": "0.12.1",
  "serial": 27,
  "lineage": "0cf9267c-ac05-ff49-5f87-3b1d1d562b1b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "spin-app-tcp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-024a64a6685d05041",
            "arn": "arn:aws:ec2:us-east-1:541020430408:instance/i-091b47b129aec3f56",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-091b47b129aec3f56",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "jahio",
            "monitoring": false,
            "primary_network_interface_id": "eni-037f59a8b2d37ba29",
            "private_dns": "ip-172-31-47-183.ec2.internal",
            "private_ip": "172.31.47.183",
            "public_dns": "ec2-35-173-132-92.compute-1.amazonaws.com",
            "public_ip": "35.173.132.92",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "iops": 100,
                "volume_id": "vol-01d0d2edb81e07a3f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow_ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-ee85d1b2",
            "tags": {
              "Name": "spin-app-tcp1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0960cd0c14906cf1e"
            ]
          },
          "depends_on": [
            "aws_security_group.spin-app-ssh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "spin-app-igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-009447ac3149035d1",
            "owner_id": "541020430408",
            "tags": {
              "Name": "spin-app-igw"
            },
            "vpc_id": "vpc-00f948ac2203d1802"
          },
          "depends_on": [
            "aws_vpc.spin-app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "spin-app-public-route-table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0e5fcd12d077d2e1a",
            "owner_id": "541020430408",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-009447ac3149035d1",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-00f948ac2203d1802"
          },
          "depends_on": [
            "aws_internet_gateway.spin-app-igw",
            "aws_vpc.spin-app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "spin-app-ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:541020430408:security-group/sg-0960cd0c14906cf1e",
            "description": "Allows all inbound SSH traffic.",
            "egress": [],
            "id": "sg-0960cd0c14906cf1e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh",
            "name_prefix": null,
            "owner_id": "541020430408",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "spin-app-ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-af2a4dd5"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "spin-app-private-subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:541020430408:subnet/subnet-0c662fe36a9f537f4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0c662fe36a9f537f4",
            "map_public_ip_on_launch": false,
            "owner_id": "541020430408",
            "tags": {
              "Name": "spin-app-private-subnet"
            },
            "vpc_id": "vpc-00f948ac2203d1802"
          },
          "depends_on": [
            "aws_vpc.spin-app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "spin-app-public_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:541020430408:subnet/subnet-0730d4c5475910e62",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0730d4c5475910e62",
            "map_public_ip_on_launch": false,
            "owner_id": "541020430408",
            "tags": {
              "Name": "spin-app-public-subnet"
            },
            "vpc_id": "vpc-00f948ac2203d1802"
          },
          "depends_on": [
            "aws_vpc.spin-app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "spin-app-vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:541020430408:vpc/vpc-00f948ac2203d1802",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a15f6aa31ecc987a",
            "default_route_table_id": "rtb-0b48647e7783c45f6",
            "default_security_group_id": "sg-057814361cd6b9f1c",
            "dhcp_options_id": "dopt-3aaeaf41",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-00f948ac2203d1802",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0b48647e7783c45f6",
            "owner_id": "541020430408",
            "tags": {
              "Name": "spin-app-vpc"
            }
          }
        }
      ]
    }
  ]
}